--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "modules/jtframe"]
 	path = modules/jtframe
 	url = https://github.com/jotego/jtframe.git
-[submodule "jt5205"]
-	path = modules/jt5205
-	url = https://github.com/jotego/jt5205.git
 [submodule "modules/jtopl"]
 	path = modules/jtopl
 	url = https://github.com/jotego/jtopl.git
+[submodule "modules/jt6295"]
+	path = modules/jt6295
+	url = https://github.com/jotego/jt6295
