--- a/rom/pang.toml
+++ b/rom/pang.toml
@@ -34,7 +34,7 @@ regions = [
     { name="maincpu",  No_offset=true   },
     { name="oki", No_offset=true, start=$PCM_START },
 
-    { name="gfx1", start=$CHAR_START, width=16, No_offset=true },
+    { name="gfx1", start=$CHAR_START, width=16, No_offset=true, sort_even=true },
     { name="gfx2", start=$OBJ_START, width=16, No_offset=true, sort_even=true }
 ]
 
