Fixes Capcom World GFX

--- a/rom/pang.toml
+++ b/rom/pang.toml
@@ -57,6 +57,9 @@ regions = [
 
     { name="gfx1", start=$CHAR_START, width=16, No_offset=true, sort_even=true },
     { machine="pkladies", name="gfx1", width=16, start=$CHAR_START, No_offset=true },
+    { machine="cworld", name="gfx1", width=16, start=$CHAR_START, No_offset=true, name_sort=[
+        "cw08.bin", "cw18.bin", "cw09.bin", "cw19.bin", "cw10.bin", "cw20.bin",
+        "cw11.bin", "cw21.bin"] },
     { name="gfx2", start=$OBJ_START, width=16, No_offset=true, sort_even=true }
 ]
 
