Last changes, simulation run but don't print frames

--- a/cores/pang/cfg/game.yaml
+++ b/cores/pang/cfg/game.yaml
@@ -2,6 +2,7 @@ game:
   - from: pang
     get:
       - jtpang_game.v
+      - jtpang_game_sdram.v
       - jtpang_main.v
       - jtpang_video.v
       - jtpang_colmix.v
